--- a/resources/css/partials/_media.scss
+++ b/resources/css/partials/_media.scss
@@ -250,12 +250,22 @@
 
   .modal {
     .modal__content {
-      width: 40%;
+      width: 50%;
+    }
+    .modal__head {
+      padding: 2.3rem;
+    }
+    .modal__form {
+      padding: 2rem;
+    }
+    .modal__close {
+      color: $color-light;
+      left: 37rem;
     }
   }
 
   .modal__inputs {
-    background-color: #e6e6e6;
-    padding: 1rem;
+    background-color: #eeebeb;
+    padding: 1.5rem;
   }
 }
