--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -431,7 +431,7 @@ a:visited {
 .modal__close {
   position: absolute;
   top: 1rem;
-  left: 20rem;
+  left: 18rem;
   color: #aaa;
   font-size: 1.25rem;
   font-weight: 700; }
@@ -459,7 +459,7 @@ a:visited {
   .modal__form .modal__input {
     font-size: 1rem;
     font-weight: 400;
-    height: 2.75rem;
+    height: 2.70rem;
     margin: 0rem auto 1rem auto;
     background-color: #ffffff;
     display: inline;
@@ -501,6 +501,15 @@ a:visited {
   height: 1rem;
   margin-bottom: 1rem; }
 
+.modal__input--num {
+  font-size: 1rem;
+  font-weight: 400;
+  height: 2.70rem;
+  margin: 0rem auto 1rem auto;
+  background-color: #ffffff;
+  border: 0.75px solid #b5b8b9;
+  width: 45%; }
+
 .modal__newsletter {
   font-size: 0.9rem;
   font-weight: 400;
@@ -510,8 +519,7 @@ a:visited {
   display: flex;
   justify-content: flex-end;
   align-items: stretch;
-  flex-direction: row;
-  background-color: white; }
+  flex-direction: row; }
   .modal__button .modal__submit {
     font-size: 1.25rem;
     font-weight: 400;
@@ -744,10 +752,17 @@ a:visited {
     display: none; }
 
   .modal .modal__content {
-    width: 40%; }
+    width: 50%; }
+  .modal .modal__head {
+    padding: 2.3rem; }
+  .modal .modal__form {
+    padding: 2rem; }
+  .modal .modal__close {
+    color: #ffffff;
+    left: 37rem; }
 
   .modal__inputs {
-    background-color: #e6e6e6;
-    padding: 1rem; } }
+    background-color: #eeebeb;
+    padding: 1.5rem; } }
 
 /*# sourceMappingURL=style.css.map */
