--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -5,7 +5,7 @@
 // Font import
 @import 'partials/fonts';
 // Modal import 
-@import 'modal.scss';
+@import 'partials/modal';
 
 // Header and navigation styles --------//
 .nav {
