--- a/resources/css/partials/_base.scss
+++ b/resources/css/partials/_base.scss
@@ -57,3 +57,13 @@ a {
     color: $color-primary;
   }
 }
+
+button, input[type="submit"], input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
