--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -58,6 +58,15 @@ a:visited {
   text-decoration: none;
   color: #1f59b1; }
 
+button, input[type="submit"], input[type="reset"] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit; }
+
 @font-face {
   font-family: 'OpenSans';
   src: url("../fonts/opensans-extrabold.ttf") format("tff");
@@ -105,9 +114,9 @@ a:visited {
     background-color: #fefefe;
     margin: 15% auto;
     border: 1px solid #888;
-    width: 85%; }
+    width: 350px; }
 
-.modal__legend {
+.modal__contact {
   margin-bottom: 1.5rem; }
 
 .modal__inputs {
@@ -116,8 +125,8 @@ a:visited {
 
 .modal__close {
   position: absolute;
-  top: 1rem;
-  left: 18rem;
+  top: 0.6rem;
+  left: 20.3rem;
   color: #aaa;
   font-size: 1.25rem;
   font-weight: 700; }
@@ -145,9 +154,10 @@ a:visited {
   .modal__form .modal__input {
     font-size: 1rem;
     font-weight: 400;
+    margin-bottom: 0.75rem;
     height: 2.70rem;
     background-color: #ffffff;
-    width: 90%;
+    width: 100%;
     border: 0.75px solid #b5b8b9; }
   .modal__form .modal__textarea {
     font-size: 1rem;
@@ -155,7 +165,7 @@ a:visited {
     height: 3.25rem;
     margin-bottom: 1rem;
     background-color: #ffffff;
-    width: 90%;
+    width: 100%;
     border: 0.75px solid #a5a7a8; }
 
 .modal__head {
@@ -188,7 +198,7 @@ a:visited {
   font-size: 1rem;
   font-weight: 400;
   height: 2.70rem;
-  margin: 0rem auto 1rem auto;
+  margin-bottom: 0.75rem;
   background-color: #ffffff;
   border: 0.75px solid #b5b8b9;
   width: 45%; }
@@ -198,32 +208,54 @@ a:visited {
   font-weight: 400;
   text-align: left; }
 
-.modal__button {
-  display: flex;
-  justify-content: flex-end;
-  align-items: stretch;
-  flex-direction: row; }
-  .modal__button .modal__submit {
-    font-size: 1.25rem;
-    font-weight: 400;
-    color: #29d4c6;
-    font-size: 1.25rem;
-    text-align: right; }
+.modal__submit[type=submit] {
+  color: #29d4c6;
+  float: right; }
+
+.modal__submit--desktop {
+  display: none; }
+
+.modal__arrow {
+  display: none; }
 
 @media screen and (min-width: 768px) {
   .modal .modal__content {
-    width: 50%; }
+    width: 600px; }
   .modal .modal__head {
     padding: 2.3rem; }
   .modal .modal__form {
     padding: 2rem; }
   .modal .modal__close {
     color: #ffffff;
-    left: 37rem; }
+    top: 0.6rem;
+    left: 36rem; }
 
   .modal__inputs {
     background-color: #eeebeb;
-    padding: 1.5rem; } }
+    padding: 1.5rem; }
+
+  .modal__submit {
+    display: none; }
+
+  .modal__submit--desktop[type=submit] {
+    font-size: 0.9rem;
+    font-weight: 400;
+    display: block;
+    margin: 0 auto; }
+
+  .modal__desktop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row; }
+
+  .modal__submit--container {
+    display: inline-flex; }
+
+  .modal__arrow {
+    width: auto;
+    height: 1rem;
+    margin-left: 0.25rem; } }
 .nav {
   position: relative; }
 
@@ -760,20 +792,6 @@ a:visited {
     border: none; }
 
   .footer__text {
-    display: none; }
-
-  .modal .modal__content {
-    width: 50%; }
-  .modal .modal__head {
-    padding: 2.3rem; }
-  .modal .modal__form {
-    padding: 2rem; }
-  .modal .modal__close {
-    color: #ffffff;
-    left: 37rem; }
-
-  .modal__inputs {
-    background-color: #eeebeb;
-    padding: 1.5rem; } }
+    display: none; } }
 
 /*# sourceMappingURL=style.css.map */
