--- a/resources/css/partials/_modal.scss
+++ b/resources/css/partials/_modal.scss
@@ -62,7 +62,7 @@
     margin-bottom: 0.75rem;
     height: 2.70rem;
     background-color: $color-light;
-    width: 100%;
+    width: 95%;
     border: 0.75px solid #b5b8b9;
   }
   .modal__textarea {
@@ -70,7 +70,7 @@
     height: 3.25rem;
     margin-bottom: 1rem;
     background-color: $color-light;
-    width: 100%;
+    width: 95%;
     border: 0.75px solid #a5a7a8;
   }
 }
@@ -153,6 +153,12 @@
     background-color: #eeebeb;
     padding: 1.5rem;
   }
+  .modal__input {
+    width: 100%;
+  }
+  .modal__textarea {
+    width: 100%;
+  }
   .modal__submit {
     display: none;
   }
@@ -168,6 +174,7 @@
     display: inline-flex;
   }
   .modal__arrow {
+    display: inline;
     width: auto;
     height: 1rem;
     margin-left: 0.25rem;
