--- a/resources/css/partials/_media.scss
+++ b/resources/css/partials/_media.scss
@@ -1,5 +1,40 @@
-/* Media Query for Desktop View ----- */
-@media screen and (min-width: 768px) {
+// Media Query for tablet view 
+@media screen and (min-width: 650px) {
+  // Nav section
+  .nav__find {
+    @include font($font-l, $font-regular);
+  }
+  .nav__link {
+    width: 6rem;
+  }
+
+  // Filters section 
+  .filters {
+    .filters__head {
+      @include flex(space-around, center, row);
+    }
+  }
+  .business__phone {
+    max-width: 60%;
+    .business__call {
+      font-size: $font-m;
+    }
+    .business__number {
+      font-size: $font-l;
+    }
+  }
+  .business__contact {
+    max-width: 50%;
+  }
+
+  // Footer section
+  .footer__social {
+    justify-content: space-around;
+  }
+}
+
+// Media query for desktop view
+@media screen and (min-width: 846px) {
 
   /* Main Section Desktop Styles ----- */
   .business__container {
