updates big time

--- a/resources/css/partials/_base.scss
+++ b/resources/css/partials/_base.scss
@@ -20,6 +20,7 @@ $font-xl: 1.5rem;
 // Colors
 $color-primary: #1f59b1;
 $color-secondary: #1fb19e;
+$color-bright: #2bcece;
 $color-dark: #154080;
 $color-footer: #2e71d4;
 $color-light: #ffffff;
