--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -218,7 +218,7 @@ button, input[type="submit"], input[type="reset"] {
 .modal__arrow {
   display: none; }
 
-@media screen and (min-width: 846px) {
+@media screen and (min-width: 904px) {
   .modal .modal__content {
     width: 600px; }
   .modal .modal__head {
@@ -263,8 +263,12 @@ button, input[type="submit"], input[type="reset"] {
     width: auto;
     height: 1rem;
     margin-left: 0.25rem; } }
+.nav__li--dk {
+  display: none; }
+
 .nav {
-  position: relative; }
+  position: relative;
+  box-shadow: 0 2px 1px 1px #5c5a5a; }
 
 .nav__content {
   display: flex;
@@ -272,18 +276,11 @@ button, input[type="submit"], input[type="reset"] {
   align-items: center;
   flex-direction: row;
   height: 60px;
-  box-shadow: 0 1px 1px 1px #3a3d41;
-  background-color: #ffffff;
-  z-index: 10; }
+  background-color: #ffffff; }
 
-.nav__home {
-  width: 39%;
-  margin-right: 1.2rem;
-  z-index: 4; }
-  .nav__home .nav__logo {
-    max-width: 100%;
-    padding-left: 1.15rem;
-    z-index: 4; }
+.nav__logo {
+  width: 9rem;
+  padding-left: 1.15rem; }
 
 .nav__find {
   border: 2px solid #1f59b1;
@@ -296,23 +293,22 @@ button, input[type="submit"], input[type="reset"] {
   font-weight: 700;
   text-decoration-style: none; }
 
-.nav__link {
+.nav__link--mobile {
   margin-top: 1rem;
   width: 5rem;
   height: 3.25rem;
   padding: 0;
   margin: 0;
   z-index: 4; }
-  .nav__link .nav__button {
+  .nav__link--mobile .nav__button {
     max-width: 77%; }
 
 .banner {
-  overflow: hidden; }
-  .banner .banner__img {
-    width: 80%;
-    padding-top: 2rem;
-    padding-bottom: 1.5rem;
-    transform: scale(2); }
+  background-image: url("../images/water-image.png");
+  height: 100px;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat; }
 
 .nav__menu {
   top: 100%;
@@ -334,7 +330,7 @@ button, input[type="submit"], input[type="reset"] {
     font-size: 1.25rem; }
     .nav__menu .nav__close a:visited {
       color: #1fb19e; }
-  .nav__menu .nav__title {
+  .nav__menu .nav__title--mobile {
     color: #1f59b1;
     padding: 1.75rem;
     text-align: center;
@@ -347,26 +343,24 @@ button, input[type="submit"], input[type="reset"] {
 
 .nav__list {
   width: 100%; }
-  .nav__list li {
+  .nav__list .nav__li {
     background-color: #e9e9e9;
-    color: #6a6c70 !important;
+    color: #6a6c70;
     padding: 1rem;
     margin-bottom: 2px;
     position: relative; }
-    .nav__list li a:visited {
+    .nav__list .nav__li li::after {
+      background-image: url("../images/next-arrow.png");
+      height: 24px;
+      width: 22px;
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      margin-top: -12px;
+      background-size: 20px;
+      background-repeat: no-repeat; }
+    .nav__list .nav__li a:visited {
       color: #696b6d; }
-  .nav__list li:last-child {
-    margin-bottom: 0; }
-  .nav__list li::after {
-    background-image: url(../images/next-arrow.png);
-    height: 24px;
-    width: 22px;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    margin-top: -12px;
-    background-size: 20px;
-    background-repeat: no-repeat; }
 
 /* Filter Results Section --------------- */
 .filters {
@@ -482,7 +476,7 @@ button, input[type="submit"], input[type="reset"] {
   flex-direction: row;
   border-radius: 5px;
   margin: 0rem auto 1.5rem auto;
-  border: 2px solid #1fb19e;
+  border: 2px solid #2bcece;
   padding: 1rem 0rem 1rem 0rem;
   max-width: 60%; }
   .business__contact:hover {
@@ -582,8 +576,11 @@ button, input[type="submit"], input[type="reset"] {
     font-size: 1.25rem;
     font-weight: 400; }
 
-  .nav__link {
+  .nav__link--mobile {
     width: 6rem; }
+
+  .nav__logo {
+    width: 18rem; }
 
   .filters .filters__head {
     display: flex;
@@ -603,7 +600,7 @@ button, input[type="submit"], input[type="reset"] {
 
   .footer__social {
     justify-content: space-around; } }
-@media screen and (min-width: 846px) {
+@media screen and (min-width: 904px) {
   /* Main Section Desktop Styles ----- */
   .business__container {
     display: flex;
@@ -649,57 +646,71 @@ button, input[type="submit"], input[type="reset"] {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px; }
 
-  /* Navigation and Header Desktop Styles ----- */
-  .banner .banner__img {
-    padding-top: 0.1rem;
-    transform: scale(1);
-    width: 100%;
-    height: auto;
-    margin-bottom: -5.5rem; }
+  .banner {
+    height: 150px;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden; }
 
   .nav {
-    display: none;
-    position: relative; }
-
-  .navigation {
-    width: 100%;
-    z-index: 9999;
-    box-shadow: 0 1px 1px #888888;
-    display: block; }
-
-  .navigation__list {
-    font-weight: 700; }
-    .navigation__list a:hover {
-      color: #1fb19e; }
-
-  .navigation__desktop {
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
     height: 100px;
-    max-width: 1250px;
-    margin: 0 auto; }
-    .navigation__desktop .navigation__find {
-      border: 2px solid #1f59b1;
-      color: #1f59b1;
-      padding: 0.75rem 1.25rem;
-      border-radius: 5px;
-      margin: 0rem 1rem 0rem 1rem;
-      font-size: 0.9rem;
-      font-weight: 700;
-      text-decoration-style: none; }
-      .navigation__desktop .navigation__find:hover {
+    margin: 0 auto;
+    width: 100%;
+    z-index: 9999;
+    display: block; }
+    .nav .nav__li--dk {
+      display: inline;
+      margin-top: 0; }
+    .nav .nav__li {
+      background-color: #ffffff;
+      display: inline; }
+      .nav .nav__li a:visited {
+        color: #1f59b1; }
+      .nav .nav__li a:hover {
         color: #1fb19e; }
+    .nav .nav__menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row;
+      height: 100%;
+      width: auto;
+      position: static; }
 
-  .navigation__desktop ul li {
-    list-style-type: none;
-    display: inline;
-    margin: 1rem; }
+  .nav__list {
+    font-size: 1rem;
+    font-weight: 700; }
 
-  .site__logo--desktop {
-    max-width: 18%;
-    margin-left: 1.25rem; }
+  .nav__find--dk {
+    border: 2px solid #1f59b1;
+    color: #1f59b1;
+    padding: 0.75rem 1.25rem;
+    border-radius: 5px;
+    margin: 0rem 1rem 0rem 1rem;
+    text-decoration-style: none; }
+    .nav__find--dk:hover {
+      color: #1fb19e; }
+
+  .nav__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    height: 100px;
+    margin: 0 auto;
+    max-width: 1250px; }
+
+  .nav__content {
+    box-shadow: none; }
+    .nav__content .nav__logo {
+      width: 14rem; }
+
+  .nav__close, .nav__title--mobile, .nav__link--mobile, .nav__find {
+    display: none; }
 
   .top {
     background-color: #154080;
@@ -731,7 +742,7 @@ button, input[type="submit"], input[type="reset"] {
     align-items: center;
     flex-direction: row;
     background-color: #f0eeee;
-    max-width: 960px;
+    max-width: 1245px;
     margin: 0 auto;
     border: none;
     border-radius: 10px;
