--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -8,27 +8,25 @@
 @import 'partials/modal';
 
 // Header and navigation styles --------//
+.nav__li--dk {
+  display: none;
+}
 .nav {
   position: relative;
+  box-shadow: 0 2px 1px 1px rgb(92, 90, 90);
 }
 .nav__content {
   @include flex(space-between, center, row);
   height: 60px;
-  box-shadow: 0 1px 1px 1px #3a3d41;
   background-color: $color-light;
-  z-index: 10;
 }
 
-.nav__home {
-  width: 39%;
-  margin-right: 1.2rem;
-  z-index: 4;
-  .nav__logo {
-    max-width: 100%;
-    padding-left: 1.15rem;
-    z-index: 4;
-  }
+
+.nav__logo {
+  width: 9rem;
+  padding-left: 1.15rem;
 }
+
 
 .nav__find {
   border: 2px solid $color-primary;
@@ -42,7 +40,7 @@
   text-decoration-style: none;
 }
 
-.nav__link {
+.nav__link--mobile {
   margin-top: 1rem;
   width: 5rem;
   height: 3.25rem;
@@ -55,13 +53,11 @@
 }
 
 .banner {
-  overflow: hidden;
-  .banner__img {
-    width: 80%;
-    padding-top: 2rem;
-    padding-bottom: 1.5rem;
-    transform: scale(2);
-  }
+  background-image: url("../images/water-image.png");
+  height: 100px;
+  background-size: cover;
+  background-position: top;
+  background-repeat: no-repeat;
 }
 
 // Mobile drop down -------------------- //
@@ -87,7 +83,7 @@
       color: $color-secondary;
     }
   }
-  .nav__title {
+  .nav__title--mobile {
     color: $color-primary;
     padding: 1.75rem;
     text-align: center;
@@ -103,29 +99,26 @@
 
 .nav__list {
   width: 100%;
-  li {
+  .nav__li {
     background-color: #e9e9e9;
-    color: #6a6c70 !important;
+    color: #6a6c70;
     padding: 1rem;
     margin-bottom: 2px;
     position: relative;
+    li::after {
+      background-image: url("../images/next-arrow.png");
+      height: 24px;
+      width: 22px;
+      position: absolute;
+      right: 20px;
+      top: 50%;
+      margin-top: -12px;
+      background-size: 20px;
+      background-repeat: no-repeat;
+    }
     a:visited { 
       color: #696b6d;
     }
-  }
-  li:last-child {
-    margin-bottom: 0;
-  }
-  li::after {
-    background-image: url(../images/next-arrow.png);
-    height: 24px;
-    width: 22px;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    margin-top: -12px;
-    background-size: 20px;
-    background-repeat: no-repeat;
   }
 }
 
@@ -249,7 +242,7 @@
   @include flex(center, center, row);
   border-radius: 5px;
   margin: 0rem auto 1.5rem auto;
-  border: 2px solid $color-secondary;
+  border: 2px solid $color-bright;
   padding: 1rem 0rem 1rem 0rem;
   max-width: 60%;
   &:hover {
