--- a/resources/css/partials/_modal.scss
+++ b/resources/css/partials/_modal.scss
@@ -25,6 +25,28 @@
 
 .modal__inputs {
   @include font($font-m, $font-regular);
+  position: relative;
+}
+
+.modal__circle--one {
+  width: 1.25rem;
+  position: absolute;
+  top: 0rem;
+  right: 0rem;
+}
+
+.modal__circle--two {
+  width: 1.25rem;
+  position: absolute;
+  top: 5rem;
+  right: 11rem;
+}
+
+.modal__circle--three {
+  width: 1.25rem;
+  position: absolute;
+  top: 10rem;
+  right: 0rem;
 }
 
 .modal__close {
@@ -178,5 +200,18 @@
     width: auto;
     height: 1rem;
     margin-left: 0.25rem;
+  }
+  .modal__circle--one {
+    top: 1.5rem;
+    right: 1.5rem;
+  }
+  
+  .modal__circle--two {
+    top: 6.5rem;
+    right: 18.3rem;
+  }
+  .modal__circle--three {
+    top: 11.5rem;
+    right: 1.5rem;
   }
 }
