--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,7 +121,26 @@ button, input[type="submit"], input[type="reset"] {
 
 .modal__inputs {
   font-size: 1rem;
-  font-weight: 400; }
+  font-weight: 400;
+  position: relative; }
+
+.modal__circle--one {
+  width: 1.25rem;
+  position: absolute;
+  top: 0rem;
+  right: 0rem; }
+
+.modal__circle--two {
+  width: 1.25rem;
+  position: absolute;
+  top: 5rem;
+  right: 11rem; }
+
+.modal__circle--three {
+  width: 1.25rem;
+  position: absolute;
+  top: 10rem;
+  right: 0rem; }
 
 .modal__close {
   position: absolute;
@@ -262,7 +281,19 @@ button, input[type="submit"], input[type="reset"] {
     display: inline;
     width: auto;
     height: 1rem;
-    margin-left: 0.25rem; } }
+    margin-left: 0.25rem; }
+
+  .modal__circle--one {
+    top: 1.5rem;
+    right: 1.5rem; }
+
+  .modal__circle--two {
+    top: 6.5rem;
+    right: 18.3rem; }
+
+  .modal__circle--three {
+    top: 11.5rem;
+    right: 1.5rem; } }
 .nav__li--dk {
   display: none; }
 
