--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -127,19 +127,19 @@ button, input[type="submit"], input[type="reset"] {
 .modal__circle--one {
   width: 1.25rem;
   position: absolute;
-  top: 0rem;
+  top: -.15rem;
   right: 0rem; }
 
 .modal__circle--two {
   width: 1.25rem;
   position: absolute;
-  top: 5rem;
+  top: 5.35rem;
   right: 11rem; }
 
 .modal__circle--three {
   width: 1.25rem;
   position: absolute;
-  top: 10rem;
+  top: 10.9rem;
   right: 0rem; }
 
 .modal__close {
@@ -173,7 +173,7 @@ button, input[type="submit"], input[type="reset"] {
   .modal__form .modal__input {
     font-size: 1rem;
     font-weight: 400;
-    margin-bottom: 0.75rem;
+    margin-bottom: 1.25rem;
     height: 2.70rem;
     background-color: #ffffff;
     width: 100%;
@@ -182,7 +182,7 @@ button, input[type="submit"], input[type="reset"] {
     font-size: 1rem;
     font-weight: 400;
     height: 3.25rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.25rem;
     background-color: #ffffff;
     width: 100%;
     border: 0.75px solid #a5a7a8; }
@@ -217,7 +217,7 @@ button, input[type="submit"], input[type="reset"] {
   font-size: 1rem;
   font-weight: 400;
   height: 2.70rem;
-  margin-bottom: 0.75rem;
+  margin-bottom: 1.25rem;
   background-color: #ffffff;
   border: 0.75px solid #b5b8b9;
   width: 45%; }
@@ -284,15 +284,15 @@ button, input[type="submit"], input[type="reset"] {
     margin-left: 0.25rem; }
 
   .modal__circle--one {
-    top: 1.5rem;
+    top: 1.34rem;
     right: 1.5rem; }
 
   .modal__circle--two {
-    top: 6.5rem;
+    top: 6.85rem;
     right: 18.3rem; }
 
   .modal__circle--three {
-    top: 11.5rem;
+    top: 12.4rem;
     right: 1.5rem; } }
 .nav__li--dk {
   display: none; }
