--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -244,7 +244,7 @@
   @include flex(center, center, row);
   border-radius: 5px;
   margin: 0rem auto 1.5rem auto;
-  border: 2px solid $color-bright;
+  border: 2px solid $color-secondary;
   padding: 1rem 0rem 1rem 0rem;
   max-width: 60%;
   &:hover {
